--- a/PrimerTrimestre/FormularioApp/pom.xml
+++ b/PrimerTrimestre/FormularioApp/pom.xml
@@ -14,13 +14,18 @@
 <junit.version>5.10.2</junit.version>  </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.17.0</version>
+    </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.30</version>
-
-
     </dependency>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
